network: add remove node
